examples/shell_err_unclosed/expected.txt
error: unclosed shell interpolation: missing `}`
  --> input:2:18
  |
2 | let bad = $ echo @{x
  |                  ^^^
